# Boost.OpenMethod

./: .appveyor.yml  .drone.jsonnet  .gitignore  CMakeLists.txt  README.md  build.jam  index.html
.github/workflows/: ci.yml  main.yml
ce/: 2-method-vptr-final.cpp  2-method-vptr.cpp  2-method.cpp  uni-method-vptr-final.cpp  uni-method-vptr.cpp  uni-method.cpp
dev/: flatten.py  local-flat.sh
doc/: BOOST_OPENMETHOD.adoc  BOOST_OPENMETHOD_CLASSES.adoc  BOOST_OPENMETHOD_DEFAULT_POLICY.adoc  BOOST_OPENMETHOD_ID.adoc  BOOST_OPENMETHOD_INLINE_OVERRIDE.adoc  BOOST_OPENMETHOD_NAME.adoc  BOOST_OPENMETHOD_OVERRIDE.adoc  BOOST_OPENMETHOD_OVERRIDER.adoc  BOOST_OPENMETHOD_OVERRIDERS.adoc  BOOST_OPENMETHOD_REGISTER.adoc  abstract_policy.adoc  antora.yml  basic_domain.adoc  basic_error_output.adoc  basic_policy.adoc  basic_trace_output.adoc  build_antora.sh  core_api.adoc  custom_rtti.adoc  default_error_handler.adoc  deferred_static_rtti.adoc  domain.adoc  dynamic_loading.adoc  error_handler.adoc  error_handling.adoc  error_output.adoc  facet.adoc  friendship.adoc  headers.adoc  headers_namespaces.adoc  hello_world.adoc  index.html  initialize.adoc  inplace_vptr.adoc  introduction.adoc  local-playbook.yml  map_vptr.adoc  method.adoc  method_override.adoc  minimal_rtti.adoc  (+31 more)
doc/html/: index.html
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/example/: asteroids.cpp  custom_rtti.cpp  dl.hpp  dl_main.cpp  dl_shared.cpp  friendship.cpp  hello_world.cpp  throw_error_handler.cpp  virtual_.cpp
doc/modules/ROOT/examples/: CMakeLists.txt  accept_no_visitors.cpp  ast.cpp  ast_unique_ptr.cpp  core_api.cpp  custom_rtti.cpp  default_error_handler.cpp  deferred_custom_rtti.cpp  dl.hpp  dl_main.cpp  dl_shared.cpp  friendship.cpp  friendship_across_namespaces.cpp  matrix.cpp  slides.cpp  static_rtti.cpp  synopsis.cpp  throw_error_handler.cpp  virtual_.cpp  virtual_ptr.cpp
doc/modules/ROOT/pages/: BOOST_OPENMETHOD.adoc  BOOST_OPENMETHOD_CLASSES.adoc  BOOST_OPENMETHOD_DECLARE_OVERRIDER.adoc  BOOST_OPENMETHOD_DEFAULT_REGISTRY.adoc  BOOST_OPENMETHOD_DEFINE_OVERRIDER.adoc  BOOST_OPENMETHOD_GUIDE.adoc  BOOST_OPENMETHOD_INLINE_OVERRIDE.adoc  BOOST_OPENMETHOD_OVERRIDE.adoc  BOOST_OPENMETHOD_OVERRIDERS.adoc  BOOST_OPENMETHOD_REGISTER.adoc  core_api.adoc  custom_rtti.adoc  dynamic_loading.adoc  error_handling.adoc  friendship.adoc  headers_namespaces.adoc  hello_world.adoc  index.adoc  macros.adoc  multiple_dispatch.adoc  performance.adoc  policies.adoc  reference.adoc  smart_pointers.adoc  virtual_ptr_alt.adoc
doc/tagfiles/: boost-openmethod-doxygen.tag.xml  boost-openmethod-macros-doxygen.tag.xml
example/: CMakeLists.txt  ast.cpp  core_api.cpp  default_error_handler.cpp  deferred_custom_rtti.cpp  friendship_across_namespaces.cpp  next.cpp  virtual_.cpp
example/headers_namespaces/: main.cpp
examples/: CMakeLists.txt  accept_no_visitors.cpp  adventure.cpp  ast.cpp  ast_unique_ptr.cpp  asteroids.cpp  core_api.cpp  custom_rtti.cpp  default_error_handler.cpp  deferred_custom_rtti.cpp  dl.hpp  dl_main.cpp  dl_shared.cpp  friendship.cpp  friendship_across_namespaces.cpp  hello_world.cpp  matrix.cpp  next.cpp  slides.cpp  synopsis.cpp  throw_error_handler.cpp  vectored_error_handler.cpp  virtual_.cpp  virtual_func.cpp  virtual_ptr.cpp
examples/headers_namespaces/: animal.hpp  cat.cpp  cat.hpp  dog.cpp  dog.hpp  main.cpp  main_unrelated_namespaces.cpp  main_using_directive.cpp
flat/boost/: openmethod.hpp
flat/boost/openmethod/: policies.hpp
include/boost/: openmethod.hpp
include/boost/openmethod/: compiler.hpp  core.hpp  decode.hpp  default_registry.hpp  flat.hpp  initialize.hpp  inplace_vptr.hpp  intrusive_vptr.hpp  macros.hpp  policies.hpp  registry.hpp  shared_ptr.hpp  shared_virtual_ptr.hpp  templates.hpp  unique_ptr.hpp  unique_virtual_ptr.hpp  virtual_shared_ptr.hpp  virtual_unique_ptr.hpp  with_vptr.hpp
include/boost/openmethod/detail/: compiler.hpp  mrdocs.hpp  ostdstream.hpp  static_list.hpp  trace.hpp  types.hpp
include/boost/openmethod/macros/: gensym.hpp  name.hpp  register.hpp
include/boost/openmethod/policies/: basic_error_output.hpp  basic_policy.hpp  basic_trace_output.hpp  core.hpp  default_error_handler.hpp  fast_perfect_hash.hpp  minimal_rtti.hpp  static_rtti.hpp  std_rtti.hpp  stderr_output.hpp  throw_error_handler.hpp  vectored_error_handler.hpp  vptr_map.hpp  vptr_vector.hpp
meta/: libraries.json
test/: CMakeLists.txt  Jamfile  check_cmake_version.cpp  compile_fail_bad_virtual_parameter.cpp  compile_fail_non_polymorphic_virtual_ptr.cpp  compile_fail_not_polymorphic_virtual_ptr.cpp  compile_fail_virtual_parameter_to_value.cpp  compile_fail_virtual_ptr_different_registries.cpp  compile_fail_virtual_ptr_other.cpp  compile_fail_virtual_ptr_ref_to_value.cpp  compile_fail_virtual_ptr_shared_not_const.cpp  compile_fail_virtual_ptr_value_to_ref.cpp  test_blackbox.cpp  test_compiler.cpp  test_core.cpp  test_custom_rtti.cpp  test_dispatch.cpp  test_intrusive.cpp  test_member_method.cpp  test_n2216.cpp  test_namespaces.cpp  test_pointer_to_method.cpp  test_policies.cpp  test_repeated_inheritance.cpp  test_rolex.cpp  test_runtime_errors.cpp  test_shared_virtual_ptr_value_semantics.cpp  test_static_list.cpp  test_static_rtti.cpp  test_unique_virtual_ptr_value_semantics.cpp  test_util.hpp  test_virtual_ptr.cpp  test_virtual_ptr_all.cpp  test_virtual_ptr_basic.cpp  test_virtual_ptr_dispatch.cpp  test_virtual_ptr_doc.cpp  test_virtual_ptr_state.cpp  test_virtual_ptr_value_semantics.cpp  test_virtual_ptr_value_semantics.hpp  test_virtual_state.cpp
test/cmake_install_test/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt  main.cpp
